Fixed wrong colors on nested admonition in details

--- a/src/assets/stylesheets/extensions/_admonition.scss
+++ b/src/assets/stylesheets/extensions/_admonition.scss
@@ -54,7 +54,7 @@
     }
 
     // Title
-    .admonition-title {
+    > .admonition-title {
       margin: -1.2rem -1.2rem 0;
       padding: 0.8rem 1.2rem 0.8rem 4rem;
       border-bottom: 0.1rem solid transparentize($clr-blue-a200, 0.9);
@@ -95,7 +95,7 @@
         border-left: 0.4rem solid $tint;
 
         // Title
-        .admonition-title {
+        > .admonition-title {
           border-bottom: 0.1rem solid transparentize($tint, 0.9);
           background-color: transparentize($tint, 0.9);
 
